--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   provider: ^6.0.4
   email_validator: ^2.1.16
+  google_maps_flutter: ^2.2.5
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/s4e_icon.jpg
+    - assets/map_style/google_map_style.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
