--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.7.0
-  firebase_auth: ^4.2.9
+  firebase_auth: ^4.2.10
   firebase_storage: ^11.0.14
   cloud_firestore: ^4.4.4
   flutter_bloc: ^8.1.2
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.4
   email_validator: ^2.1.16
   google_maps_flutter: ^2.2.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
