--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.social_4_events">
     <application
+        android:requestLegacyExternalStorage="true"
         android:label="social_4_events"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
