--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   email_validator: ^2.1.16
   google_maps_flutter: ^2.2.5
   intl: ^0.17.0
+  image_picker: ^0.8.7
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
