--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,6 +53,9 @@
 	<string>La nostra app richiede l'accesso alla fotocamera per consentire all'utente di scattare foto e registrare video.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>La nostra app richiede l'accesso al microfono per consentire all'utente di registrare audio durante la registrazione di video.</string>
-
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application requires location services to work</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This application requires location services to work</string>
 </dict>
 </plist>
