--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="social_4_events"
+        android:label="S4E"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
